can now copy text from tmux floax popover

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,6 +57,10 @@ set -agF status-right "#{E:@catppuccin_status_date_time}"
 set -g @floax-bind '-n C-t'
 set -g @floax-change-path 'true'
 
+bind-key -T copy-mode-vi 'v' send -X begin-selection 
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+
 
   # Toggle a persistent ncspot popup with Ctrl+s + m
 bind m run-shell ' \
