changed floax binding from C-t to

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,14 +47,15 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 set -agF status-right "#{E:@catppuccin_status_date_time}"
 
-# set -g status-position top
+# set -g statuS-POsition top
 
 # bind-key t if-shell -F "#{pane_popup}" \
 #   "kill-pane -t #{pane_id}" \
 #   "display-popup -E -w 70% -h 70% -x C -y C -T 'Floating Terminal' $SHELL"
 
 # M- means "hold Meta/Alt"
-set -g @floax-bind '-n C-t'
+set -g @floax-bind '-n ~'
+# set -g @floax-bind '-n C-t'
 set -g @floax-change-path 'true'
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
