changed floax border color to blue

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,33 +54,15 @@ set -agF status-right "#{E:@catppuccin_status_date_time}"
 #   "display-popup -E -w 70% -h 70% -x C -y C -T 'Floating Terminal' $SHELL"
 
 # M- means "hold Meta/Alt"
-set -g @floax-bind '-n ~'
+set -g @floax-bind '-n M-`'
 # set -g @floax-bind '-n C-t'
 set -g @floax-change-path 'true'
+set -g @floax-border-color 'blue'
+
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
-
-
-  # Toggle a persistent ncspot popup with Ctrl+s + m
-bind m run-shell ' \
-  if tmux list-windows -F "#{window_name}" | grep -qx ncspot; then \
-    if tmux list-panes -F "#{pane_title}" | grep -qx ncspot-popup; then \
-      tmux kill-pane -t :.ncspot-popup; \
-    else \
-      tmux display-popup -E -w 80% -h 80% -x C -y C -T ncspot-popup "tmux attach-pane -t ncspot.0"; \
-    fi; \
-  else \
-    tmux new-window -d -n ncspot "ncspot"; \
-    sleep 0.3; \
-    tmux display-popup -E -w 80% -h 80% -x C -y C -T ncspot-popup "tmux attach-pane -t ncspot.0"; \
-  fi'
-
-
-
-
-# Create or toggle a persistent ncspot popup
 
 
 run '~/.tmux/plugins/tpm/tpm'
