--- a/docker/docker/docker-compose.yml
+++ b/docker/docker/docker-compose.yml
@@ -164,6 +164,29 @@ services:
     networks:
       - default
 
+  # ────────────────────────────────
+  # Bazarr (Subtitle manager)
+  # ────────────────────────────────
+  bazarr:
+    image: lscr.io/linuxserver/bazarr:latest
+    container_name: bazarr
+    depends_on:
+      - radarr
+      - prowlarr
+      - qbittorrent
+    ports:
+      - "6767:6767"
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New_York
+    volumes:
+      - /home/aaratha/docker/configs/bazarr:/config
+      - /media/movies:/movies
+      - /home/aaratha/downloads:/downloads
+    restart: unless-stopped
+
+
 volumes:
   caddy_data:
   caddy_config:
