added ncspot popup to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ bind r source-file ~/.tmux.conf
 bind | split-window -h
 bind - split-window -v
 
-set -g prefix C-s
+set -g prefix `
 
 setw -g mode-keys vi
 
@@ -49,10 +49,7 @@ set -agF status-right "#{E:@catppuccin_status_date_time}"
 
 # set -g statuS-POsition top
 
-# bind-key t if-shell -F "#{pane_popup}" \
-#   "kill-pane -t #{pane_id}" \
-#   "display-popup -E -w 70% -h 70% -x C -y C -T 'Floating Terminal' $SHELL"
-
+#
 # M- means "hold Meta/Alt"
 set -g @floax-bind '-n M-`'
 # set -g @floax-bind '-n C-t'
@@ -63,6 +60,21 @@ set -g @floax-border-color 'blue'
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+
+# bind-key s display-popup -w 80% -h 80% "ncspot"
+
+# POPUP SHELL
+
+
+# create-or-start spotify session, disable that session's status, run ncspot, attach
+bind-key n if-shell -F '#{==:#{session_name},spotify}' \
+  'detach-client' \
+  'display-popup -E -w 80% -h 80% "sh -lc '\''tmux has-session -t spotify || 
+  { tmux new-session -d -s spotify; tmux set-option -t spotify status off;
+  tmux send-keys -t spotify ncspot C-m; };
+  tmux attach-session -t spotify'\''"'
+
+
 
 
 run '~/.tmux/plugins/tpm/tpm'
