--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,6 +66,8 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 # POPUP SHELL
 
 
+ set -g popup-style 'bg=default,fg=default'
+
 # create-or-start spotify session, disable that session's status, run ncspot, attach
 bind-key n if-shell -F '#{==:#{session_name},spotify}' \
   'detach-client' \
@@ -73,8 +75,6 @@ bind-key n if-shell -F '#{==:#{session_name},spotify}' \
   { tmux new-session -d -s spotify; tmux set-option -t spotify status off;
   tmux send-keys -t spotify ncspot C-m; };
   tmux attach-session -t spotify'\''"'
-
-
 
 
 run '~/.tmux/plugins/tpm/tpm'
