--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,7 +51,7 @@ set -agF status-right "#{E:@catppuccin_status_date_time}"
 
 #
 # M- means "hold Meta/Alt"
-set -g @floax-bind '-n M-`'
+set -g @floax-bind 't'
 # set -g @floax-bind '-n C-t'
 set -g @floax-change-path 'true'
 set -g @floax-border-color 'blue'
