added nvim-orgmode src block highlighting, codex popup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -77,6 +77,14 @@ bind-key n if-shell -F '#{==:#{session_name},spotify}' \
   tmux attach-session -t spotify'\''"'
 
 
+# Same as above but for scratch terminal (codex)
+bind-key g if-shell -F '#{==:#{session_name},llm}' \
+  'detach-client' \
+  'display-popup -E -w 80% -h 80% "sh -lc '\''tmux has-session -t llm || 
+  { tmux new-session -d -s llm; tmux set-option -t llm status off; };
+  tmux attach-session -t llm'\''"'
+
+
 run '~/.tmux/plugins/tpm/tpm'
 
 
