swaps from ncspot to spotify_player

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -73,7 +73,7 @@ bind-key n if-shell -F '#{==:#{session_name},spotify}' \
   'detach-client' \
   'display-popup -E -w 80% -h 80% "sh -lc '\''tmux has-session -t spotify || 
   { tmux new-session -d -s spotify; tmux set-option -t spotify status off;
-  tmux send-keys -t spotify ncspot C-m; };
+  tmux send-keys -t spotify spotify_player C-m; };
   tmux attach-session -t spotify'\''"'
 
 
