changes scratch term keybind to y, adds lazygit to g

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
  set -g popup-style 'bg=default,fg=default'
 
 # create-or-start spotify session, disable that session's status, run ncspot, attach
-bind-key n if-shell -F '#{==:#{session_name},spotify}' \
+bind-key p if-shell -F '#{==:#{session_name},spotify}' \
   'detach-client' \
   'display-popup -E -w 80% -h 80% "sh -lc '\''tmux has-session -t spotify || 
   { tmux new-session -d -s spotify; tmux set-option -t spotify status off;
@@ -78,11 +78,20 @@ bind-key n if-shell -F '#{==:#{session_name},spotify}' \
 
 
 # Same as above but for scratch terminal (codex)
-bind-key g if-shell -F '#{==:#{session_name},llm}' \
+bind-key y if-shell -F '#{==:#{session_name},llm}' \
   'detach-client' \
   'display-popup -E -w 80% -h 80% "sh -lc '\''tmux has-session -t llm || 
   { tmux new-session -d -s llm; tmux set-option -t llm status off; };
   tmux attach-session -t llm'\''"'
+
+
+# lazygit
+bind-key g if-shell -F '#{==:#{session_name},lazygit}' \
+  'detach-client' \
+  'display-popup -E -w 80% -h 80% "sh -lc '\''tmux has-session -t lazygit || 
+  { tmux new-session -d -s lazygit; tmux set-option -t lazygit status off;
+  tmux send-keys -t lazygit lazygit C-m; };
+  tmux attach-session -t lazygit'\''"'
 
 
 run '~/.tmux/plugins/tpm/tpm'
